# Nongki

./: .dockerignore  .env.example  .gitignore  coba.md  docker-compose.yml  repomix-output.xml  report.md
apps/web/: .dockerignore  Dockerfile  README.md  (+7 more)
services/ai-enggine/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  report.md
services/ai-enggine/app/: __init__.py  main.py
services/ai-enggine/app/agents/crm_assistant_agent/: graph.py  nodes.py  prompts.py  state.py
services/ai-enggine/app/api/: crm_assistant.py  health.py  knowledge.py  onboarding.py  tools.py  whatsapp_agent.py
services/ai-enggine/app/consumers/: __init__.py  ai_command_consumer.py
services/ai-enggine/app/core/: __init__.py  config.py  errors.py  llm.py  logging.py  security.py
services/ai-enggine/app/events/: __init__.py  ai_events.py  event_bus.py
services/ai-enggine/app/infra/: __init__.py  cache.py  locks.py  rabbitmq.py  redis_client.py
services/ai-enggine/app/rag/: embeddings.py  extractor.py  indexer.py  loader.py  retriever.py  splitter.py  vectorstore.py
services/ai-enggine/app/schemas/: agent.py  crm.py  knowledge.py  onboarding.py  order.py  payment.py  reminder.py  reservation.py  tools.py  whatsapp.py
services/ai-enggine/app/services/: agent_run_service.py  api_client.py  business_context_service.py  guardrail_service.py  knowledge_service.py  memory_service.py  tool_execution_service.py
services/ai-enggine/app/tools/: base.py  bot_readiness.py  conversation_history.py  conversation_summary.py  customer_profile.py  customer_update.py  human_handoff.py  knowledge_search.py  notification_create.py  order_create.py  order_update.py  payment_create.py  product_search.py  reminder_create.py  reservation_create.py  reservation_update.py  spreadsheet_sync.py
services/ai-enggine/docs/: agents.md  ai-engine.md  api-contract.md  env.md  rag.md  tools.md
(+370 files in other folders)
