[project]
name = "ningki-ai-enggine"
version = "0.1.0"
description = "AI Engine untuk Ningki WhatsApp AI CRM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core API
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "httpx>=0.28.1",

    # AI / Agent - LangChain + OpenAI
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-community>=0.4.2",
    "langgraph>=1.2.2",
    "langchain-openai>=1.2.2",
    "openai>=2.38.0",

    # RAG / Vector
    "faiss-cpu>=1.14.2",
    "numpy>=2.4.6",
    "tiktoken>=0.13.0",

    # File Processing
    "pypdf>=6.12.2",
    "python-multipart>=0.0.29",
    "pillow>=12.2.0",

    # Utility
    "orjson>=3.11.9",
    "tenacity>=9.1.4",
    "structlog>=25.5.0",
    "redis>=6.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
    "mypy>=2.1.0",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


